Add method Insert in VNS